--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.344.0",
@@ -18,7 +19,9 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "react-router-dom": "^7.4.1"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.4.1",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
